2001-09-24  Per Bothner  <per@bothner.com>

	* obj-test,scm:  Test previous mdoule2.scm change.

2001-09-21  Per Bothner  <per@bothner.com>

	* module1.scm:  Move most of the definitions to module2.scm.
	* module2.scm:  New file.  New test from Jocelyn Paine.
	* Makefile.am:  Update to make module2.class.
	* obj-test.scm:  Require module2 instead of module1.

2001-09-15  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New test, for bug reported by Jocelyn Paine.

2001-08-30  Per Bothner  <per@bothner.com>

	* classes1.scm (hyphenated-field?):  New field to test mangling.
	* obj-test.scm:  Test slot-ref access to new field.

2001-08-23  Per Bothner  <per@bothner.com>

	* classes1.scm, classes2.scm, SimpleB.java:  New files for
	testing define-class and define-simple-class.
	* obj-test.scm:  Added 20 more tests.
	* Makefile.am:  Rules for new tsets.

2001-07-18  Per Bothner  <per@bothner.com>

	* Makefile.am (check-scribble):  Handle appletviewer changes in JDK:
	CLASSPATH environment variable is ignored, so use -J flags.
	The filename should be a URL, so prepend 'file:'.

2001-06-04  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWALIB):  Change to use .jar file.

2001-06-03  Per Bothner  <per@bothner.com>

	* formatst.scm:  Comment out misleading message about missing complex.

2001-05-16  Per Bothner  <per@bothner.com>

	New tests Based on a bug report from Walter C. Pelissero
	<walter@pelissero.org>.  Needs to be in compiled module to trigger bug.
	* module1.scm (length-diff1, length-diff2, length-diff3):
	Define and export new procedures, using primitive subtraction.
	* obj-test.scm:  Test new procedures.

2001-03-23  Per Bothner  <per@bothner.com>

	* Makefile.am: Support for using gcj-compiled Kawa.

2001-03-08  Per Bothner  <per@bothner.com>

	* obj-test.scm:  Change expected result.

2001-02-28  Per Bothner  <per@bothner.com>

	* module1.scm (classify):  New procedure, used to cause VerifyError.
	* obj-test.scm:  Call classify and test it.
