@@ -216,8 +216,8 @@ def")
 
 ")
 (test '("~|") (string slib:form-feed))
-(test '("~_~_~_") "   ")
-(test '("~3_") "   ")
+;; SLIB specific, conflicts with CommonLisp: (test '("~_~_~_") "   ") 
+;; SLIB specific, conflicts with CommonLisp: (test '("~3_") "   ")
 ;; SLIB specific, conflicts with CommonLisp: (test '("~/") (string slib:tab))
 ;; SLIB specific: (test '("~3/") (make-string 3 slib:tab))
 
@@ -325,6 +325,7 @@ def")
 (set! fail-expected "format:iobj-case-conv not implemented")
 (test `("~a" ,display) (string-upcase (format:iobj->str display)))
 (set! format:iobj-case-conv string-downcase)
+(set! fail-expected "format:iobj-case-conv not implemented")
 (test `("~s" ,display) (string-downcase (format:iobj->str display)))
 (set! format:iobj-case-conv string-capitalize)
 (set! fail-expected "format:iobj-case-conv not implemented")
